update some funcs
