# models/UserBasic.go
@@ -1,23 +1,23 @@
 package models
 
 import (
-	"fmt"
 	"gorm.io/gorm"
 	"imessage/utils"
+	"time"
 )
 
 type UserBasic struct {
 	gorm.Model
 	Name          string
 	PassWord      string
-	Phone         string
-	Email         string
+	Phone         string `valid:"matches(^1[3-9]{1}\\d{9}$)"`
+	Email         string `valid:"email"`
 	Identity      string
 	ClientIP      string
 	ClientPort    string
-	LoginTime     uint64
-	HeartBeatTime uint64
-	LoginOutTime  uint64
+	LoginTime     time.Time
+	HeartBeatTime time.Time
+	LoginOutTime  time.Time
 	IsLogOut      bool
 	DeviceInfo    string
 }
@@ -29,8 +29,44 @@ func GetUserList() []*UserBasic {
 	data := make([]*UserBasic, 10)
 	utils.DB.Find(&data)
 
-	for _, v := range data {
-		fmt.Println(v)
-	}
+	//for _, v := range data {
+	//	fmt.Println(v)
+	//}
 	return data
+}
+
+// 通过用户姓名定位到一个人
+
+func FindUserByName(name string) UserBasic {
+	user := UserBasic{}
+	utils.DB.Where("name = ?", name).First(&user)
+	return user
+}
+
+// 通过电话号码定位到一个人
+
+func FindUserByPhone(phone string) UserBasic {
+	user := UserBasic{}
+	utils.DB.Where("phone = ?", phone).First(&user)
+	return user
+}
+
+// 通过邮箱定位到一个人
+
+func FindUserByEmail(email string) UserBasic {
+	user := UserBasic{}
+	utils.DB.Where("email = ?", email).First(&user)
+	return user
+}
+
+func CreateUser(user UserBasic) *gorm.DB {
+	return utils.DB.Create(&user)
+}
+
+func DeleteUser(user UserBasic) *gorm.DB {
+	return utils.DB.Delete(&user)
+}
+
+func UpdateUser(user UserBasic) *gorm.DB {
+	return utils.DB.Model(&user).Updates(UserBasic{Name: user.Name, PassWord: user.PassWord, Phone: user.Phone, Email: user.Email})
 }
